# rust-backend-service-template

./: .dockerignore  .gitignore  Cargo.toml  Makefile.toml  cargo-generate.toml
.github/workflows/: ci.yml  deploy-to-gke-dev.yml
devops/docker/: server.Dockerfile  setup.Dockerfile
rabbitmq/: Cargo.toml
rpc/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs  settings.rs
